# autoentrypoint

./: .coveragerc  README.rst  pyproject.toml  setup.cfg
