[metadata]
name = autoentrypoint
version = attr: autoentrypoint.version.VERSION
description = Sphinx extension for autoclassing every item registered for an entrypoint
long_description = file: README.rst
author = John Andersen
author_email = johnandersenpdx@gmail.com
maintainer = John Andersen
maintainer_email = johnandersenpdx@gmail.com
url = https://github.com/pdxjohnny/autoentrypoint
license = MIT
keywords = sphinx
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
setup_requires =
    setuptools_scm[toml]>=3.4.3
install_requires =
    sphinx>=4.0.0

[options.extras_require]
dev =
    coverage
    codecov
    sphinx
    twine
    setuptools_scm[toml]>=3.4.3
    black==19.10b0
